antex-rs/tui/src/app/tests/snapshots/antex_tui__app__tests__navigation_reconnect__daemon_command_center_vanished_rename.snap
---
source: tui/src/app/tests/navigation_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Agent command center
  0 need input   1 working   1 ready
  ────────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  2                                         │ Task details
  › ● New task  Working                                   │
    ○ Selected task  Ready                                │ New task
                                                          │ ● Working
                                                          │
                                                          │ Project
                                                          │ /tmp/project
                                                          │
                                                          │ Prompt
                                                          │ New task
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  New task

 ┃ Describe a new task

   enter create task    ctrl+j newline    esc tasks
